--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Todolist</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script></head><body></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Todo List</title>
+<script defer src="main.js"></script></head>
+<body>
+  <header>
+    <h1 id="logo">Todolist</h1>
+  </header>
+
+  <nav id="sidebar">
+    <button id="home">Home</button>
+    <div id="projects">
+      <h3>Projects</h3>
+      <div class="container"></div>
+      <button id="add-project">+ New Project</button>
+    </div>
+  </nav>
+</body>
+</html>
