Add render home

--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
-<script defer src="main.js"></script></head>
+</head>
 <body>
   <header>
     <h1 id="logo">Todolist</h1>
@@ -18,5 +18,7 @@
       <button id="add-project">+ New Project</button>
     </div>
   </nav>
+
+  <main id="content"></main>
 </body>
 </html>
