Add add project function to UI

--- a/src/template.html
+++ b/src/template.html
@@ -20,5 +20,27 @@
   </nav>
 
   <main id="content"></main>
+
+  <dialog id="project">
+    <form method="dialog">
+      <h2 class="dialog-title"></h2>
+
+      <ul class="details container">
+        <li>
+          <label for="title">Project Title</label>
+          <input type="text" id="title">
+        </li>
+        <li>
+          <label for="description">Project Description</label>
+          <input type="text" id="description">
+        </li>
+      </ul>
+
+      <div class="buttons">
+        <button id="submit">Submit</button>
+        <button id="cancel">Cancel</button>
+      </div>
+    </form>
+  </dialog>
 </body>
 </html>
