--- a/src/template.html
+++ b/src/template.html
@@ -54,7 +54,7 @@
         </li>
         <li>
           <label for="description">Task Description</label>
-          <input type="text" id="description">
+          <textarea id="description"></textarea>
         </li>
         <li>
           <label for="due-date">Due Date</label>
